Fixed UI/UX alignment of Book and Author Component and responsiveness od small device

--- a/src/assets/styles/page/_authors.scss
+++ b/src/assets/styles/page/_authors.scss
@@ -79,3 +79,15 @@
     content: "⚠ ";
   }
 }
+.create-title{
+  border-bottom:2px solid black;
+  font-weight: 500;
+  font-size: 1.3em;
+}
+.form-label{
+  font-size: 0.8em;
+}
+.form-control{
+  border: 2px solid #989898;
+  border-radius: 0;
+}
